<resources>
    <string name="app_name">Blind Assistant</string>
    <string name="main_description_text">Your best assistant is at your command</string>
    <string name="get_started_btn">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="or_text">Or</string>
    <string name="create_account_btn">Create Account</string>
    <string name="empty_field_text">You must fill all the fields</string>
    <string name="failed_authentication_text">Authentication failed.</string>
    <string name="password_verify_hint">Password Verify</string>
    <string name="locations_bottom_menu_option">Locations</string>
    <string name="faces_bottom_menu_option">Faces</string>
    <string name="no_location_text">No location found</string>
    <string name="went_wrong_text">Something went wrong</string>
    <string name="no_device_text">You don\'t have a device yet.</string>
    <string name="different_passwords_text">You must enter the same password twice.</string>
    <string name="short_password_text">Password must be at least 6 characters long.</string>
    <string name="location_outside_text">OUTSIDE</string>
    <string name="location_map_actionbar_title">Selected Location</string>
    <string name="location_list_actionbar_title">Locations</string>
    <string name="device_id_label">My Device ID</string>
    <string name="device_id_update_btn">Update</string>
    <string name="set_boundary_btn">Set Boundary</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_signout">Signout</string>
    <string name="boundary_dialog_title">What is the boundary thing?</string>
    <string name="boundary_description">You can set a boundary by adding markers to the map to be able to see if the location is outside of that boundary.</string>
    <string name="settings_actionbar_title">Settings</string>
    <string name="boundary_menu_reset">Reset</string>
    <string name="boundary_menu_save">Save</string>
    <string name="not_enough_points_text">You must mark at least 3 points!</string>
    <string name="boundary_saved_text">Boundary saved</string>
    <string name="boundary_map_actionbar_title">Boundary</string>
    <string name="empty_device_id">Your device id field is empty!</string>
    <string name="save_face_btn">Save Face</string>
    <string name="face_delete_btn">Delete</string>
    <string name="not_enough_images">You must choose 3 images!</string>
    <string name="new_face_dialog_title">Enter a face identifier</string>
    <string name="new_face_confirm_btn">Save</string>
    <string name="new_face_cancel_btn">Cancel</string>
    <string name="new_face_empty_identifier">Identifier field cannot be empty!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="deleting_face_dialog_message">You are deleting this face.</string>
    <string name="dialog_yes_option">Yes</string>
    <string name="dialog_no_option">No</string>
    <string name="faces_actionbar_title">Faces</string>
    <string name="request_location_btn">Request Location</string>
</resources>